Update title and refactored code

--- a/new.ipynb
+++ b/new.ipynb
@@ -4,14 +4,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# ESTIMATING PHYSICAL FATIGUE INDEX OF PLAYERS USING ICE HOCKEY METRICS\n",
+    "# ESTIMATING RELATIVE PHYSICAL FATIGUE INDEX OF PLAYERS USING ICE HOCKEY METRICS\n",
     "\n",
     "## Objective: To develop an application that enables coaches to input match data and obtain instant feedback on potential fatigue levels,based on the dataset's metrics.\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [
     {
@@ -262,7 +262,7 @@
        "[5 rows x 226 columns]"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 86,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -274,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -296,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -307,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -317,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [
     {
@@ -465,7 +465,7 @@
        "4                44,95           68,85  "
       ]
      },
-     "execution_count": 67,
+     "execution_count": 90,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -481,7 +481,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [
     {
@@ -502,7 +502,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 91,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -514,7 +514,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [
     {
@@ -547,7 +547,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 92,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -565,7 +565,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [
     {
@@ -1040,7 +1040,7 @@
        "20          429,53  "
       ]
      },
-     "execution_count": 70,
+     "execution_count": 93,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1055,7 +1055,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [
     {
@@ -1085,7 +1085,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 94,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1100,7 +1100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [
     {
@@ -1113,7 +1113,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 95,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1126,7 +1126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [
     {
@@ -1162,7 +1162,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## CREATING A FATIGUE LEVEL FORMULA\n",
+    "## CREATING A RELATIVE FATIGUE LEVEL FORMULA\n",
     "\n",
     "- It is a complex task that typically involves empirical research, biomechanics, and physiological considerations.\n",
     "- However, we propose a simple, hypothetical formula to estimate fatigue.\n",
@@ -1174,7 +1174,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Fatigue Index = [(Time on ice/ Match Duration) + (High Metabolic Power Distance / Total Distance) + (Mechanical Intensity)\n",
+    "### Relative Fatigue Index (RFI) = [(Time on ice/ Match Duration) + (High Metabolic Power Distance / Total Distance) + (Mechanical Intensity)\n",
     "\n",
     "- TIME FACTOR : Here, the idea is simple: the more time a player spends on the ice, the more fatigued they're likely to be.\n",
     "- DISTANCE OR INTENSITY FACTOR : Percentage of the distance covered at high intensities. It's a straightforward indicator of how hard a player pushed themselves relative to their overall activity. It is the distance covered at high metabolic power divided by the total distance covered.\n",
@@ -1183,14 +1183,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\samue\\AppData\\Local\\Temp\\ipykernel_1688\\1077918629.py:7: SettingWithCopyWarning: \n",
+      "C:\\Users\\samue\\AppData\\Local\\Temp\\ipykernel_1688\\3016819878.py:8: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -1692,7 +1692,7 @@
        "20          429,53                         1.000000  "
       ]
      },
-     "execution_count": 74,
+     "execution_count": 97,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1714,14 +1714,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Create a python function in pandas to calculate fatigue index\n",
     "\n",
     "\n",
-    "def fatigue_index(df):\n",
+    "def relative_fatigue_index(df):\n",
     "    \"\"\"This function calculates the fatigue index for each player\"\"\"\n",
     "    return (\n",
     "        (df[\"Time on Ice (s)\"] / df[\"Duration (s)\"])\n",
@@ -1731,7 +1731,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [
     {
@@ -1761,36 +1761,36 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 79,
+     "execution_count": 99,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "fatigue_index(df_imp_lugano_21)"
+    "relative_fatigue_index(df_imp_lugano_21)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\samue\\AppData\\Local\\Temp\\ipykernel_1688\\3091634077.py:2: SettingWithCopyWarning: \n",
+      "C:\\Users\\samue\\AppData\\Local\\Temp\\ipykernel_1688\\617771039.py:2: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  df_imp_lugano_21[\"Intermediate Fatigue Index\"] = df_imp_lugano_21.apply(\n",
-      "C:\\Users\\samue\\AppData\\Local\\Temp\\ipykernel_1688\\3091634077.py:10: SettingWithCopyWarning: \n",
+      "C:\\Users\\samue\\AppData\\Local\\Temp\\ipykernel_1688\\617771039.py:10: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  df_imp_lugano_21[\"Final Fatigue Index\"] = (\n"
+      "  df_imp_lugano_21[\"Final Relative Fatigue Index\"] = (\n"
      ]
     },
     {
@@ -1828,7 +1828,7 @@
        "      <th>Mechanical Load</th>\n",
        "      <th>Normalized Mechanical Intensity</th>\n",
        "      <th>Intermediate Fatigue Index</th>\n",
-       "      <th>Final Fatigue Index</th>\n",
+       "      <th>Final Relative Fatigue Index</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -2330,31 +2330,31 @@
        "19          413,46                         0.810049   \n",
        "20          429,53                         1.000000   \n",
        "\n",
-       "    Intermediate Fatigue Index  Final Fatigue Index  \n",
-       "0                     1.485737             0.889874  \n",
-       "1                     1.548003             0.927194  \n",
-       "2                     1.654899             0.991262  \n",
-       "3                     1.538095             0.921256  \n",
-       "4                     1.448679             0.867663  \n",
-       "5                     1.471295             0.881218  \n",
-       "6                     0.647389             0.387406  \n",
-       "7                     1.641736             0.983373  \n",
-       "8                     1.404328             0.841081  \n",
-       "9                     1.525707             0.913831  \n",
-       "10                    1.669477             1.000000  \n",
-       "11                    0.951123             0.569450  \n",
-       "12                    1.532141             0.917687  \n",
-       "13                    0.001019             0.000000  \n",
-       "14                    1.403397             0.840523  \n",
-       "15                    1.548994             0.927788  \n",
-       "16                    1.517963             0.909189  \n",
-       "17                    1.519416             0.910060  \n",
-       "18                    1.453339             0.870456  \n",
-       "19                    1.443519             0.864571  \n",
-       "20                    1.616113             0.968016  "
+       "    Intermediate Fatigue Index  Final Relative Fatigue Index  \n",
+       "0                     1.485737                      0.889874  \n",
+       "1                     1.548003                      0.927194  \n",
+       "2                     1.654899                      0.991262  \n",
+       "3                     1.538095                      0.921256  \n",
+       "4                     1.448679                      0.867663  \n",
+       "5                     1.471295                      0.881218  \n",
+       "6                     0.647389                      0.387406  \n",
+       "7                     1.641736                      0.983373  \n",
+       "8                     1.404328                      0.841081  \n",
+       "9                     1.525707                      0.913831  \n",
+       "10                    1.669477                      1.000000  \n",
+       "11                    0.951123                      0.569450  \n",
+       "12                    1.532141                      0.917687  \n",
+       "13                    0.001019                      0.000000  \n",
+       "14                    1.403397                      0.840523  \n",
+       "15                    1.548994                      0.927788  \n",
+       "16                    1.517963                      0.909189  \n",
+       "17                    1.519416                      0.910060  \n",
+       "18                    1.453339                      0.870456  \n",
+       "19                    1.443519                      0.864571  \n",
+       "20                    1.616113                      0.968016  "
       ]
      },
-     "execution_count": 80,
+     "execution_count": 100,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2362,14 +2362,14 @@
    "source": [
     "# 1. Compute the intermediate fatigue index for each row\n",
     "df_imp_lugano_21[\"Intermediate Fatigue Index\"] = df_imp_lugano_21.apply(\n",
-    "    fatigue_index, axis=1\n",
+    "    relative_fatigue_index, axis=1\n",
     ")\n",
     "\n",
     "# 2. Normalize this intermediate fatigue index\n",
     "min_fatigue = df_imp_lugano_21[\"Intermediate Fatigue Index\"].min()\n",
     "max_fatigue = df_imp_lugano_21[\"Intermediate Fatigue Index\"].max()\n",
     "\n",
-    "df_imp_lugano_21[\"Final Fatigue Index\"] = (\n",
+    "df_imp_lugano_21[\"Final Relative Fatigue Index\"] = (\n",
     "    df_imp_lugano_21[\"Intermediate Fatigue Index\"] - min_fatigue\n",
     ") / (max_fatigue - min_fatigue)\n",
     "\n",
@@ -2378,7 +2378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [
     {
@@ -2416,7 +2416,7 @@
        "      <th>Mechanical Load</th>\n",
        "      <th>Normalized Mechanical Intensity</th>\n",
        "      <th>Intermediate Fatigue Index</th>\n",
-       "      <th>Final Fatigue Index</th>\n",
+       "      <th>Final Relative Fatigue Index</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -2918,38 +2918,40 @@
        "6          1287,88                         0.187337   \n",
        "13            2,02                         0.000000   \n",
        "\n",
-       "    Intermediate Fatigue Index  Final Fatigue Index  \n",
-       "10                    1.669477             1.000000  \n",
-       "2                     1.654899             0.991262  \n",
-       "7                     1.641736             0.983373  \n",
-       "20                    1.616113             0.968016  \n",
-       "15                    1.548994             0.927788  \n",
-       "1                     1.548003             0.927194  \n",
-       "3                     1.538095             0.921256  \n",
-       "12                    1.532141             0.917687  \n",
-       "9                     1.525707             0.913831  \n",
-       "17                    1.519416             0.910060  \n",
-       "16                    1.517963             0.909189  \n",
-       "0                     1.485737             0.889874  \n",
-       "5                     1.471295             0.881218  \n",
-       "18                    1.453339             0.870456  \n",
-       "4                     1.448679             0.867663  \n",
-       "19                    1.443519             0.864571  \n",
-       "8                     1.404328             0.841081  \n",
-       "14                    1.403397             0.840523  \n",
-       "11                    0.951123             0.569450  \n",
-       "6                     0.647389             0.387406  \n",
-       "13                    0.001019             0.000000  "
+       "    Intermediate Fatigue Index  Final Relative Fatigue Index  \n",
+       "10                    1.669477                      1.000000  \n",
+       "2                     1.654899                      0.991262  \n",
+       "7                     1.641736                      0.983373  \n",
+       "20                    1.616113                      0.968016  \n",
+       "15                    1.548994                      0.927788  \n",
+       "1                     1.548003                      0.927194  \n",
+       "3                     1.538095                      0.921256  \n",
+       "12                    1.532141                      0.917687  \n",
+       "9                     1.525707                      0.913831  \n",
+       "17                    1.519416                      0.910060  \n",
+       "16                    1.517963                      0.909189  \n",
+       "0                     1.485737                      0.889874  \n",
+       "5                     1.471295                      0.881218  \n",
+       "18                    1.453339                      0.870456  \n",
+       "4                     1.448679                      0.867663  \n",
+       "19                    1.443519                      0.864571  \n",
+       "8                     1.404328                      0.841081  \n",
+       "14                    1.403397                      0.840523  \n",
+       "11                    0.951123                      0.569450  \n",
+       "6                     0.647389                      0.387406  \n",
+       "13                    0.001019                      0.000000  "
       ]
      },
-     "execution_count": 82,
+     "execution_count": 101,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# Sort the dataframe by the final fatigue index in descending order\n",
+    "# This will give us the most fatigued player at the top and the least fatigued player at the bottom\n",
     "df_imp_lugano_21_sorted = df_imp_lugano_21.sort_values(\n",
-    "    by=\"Final Fatigue Index\", ascending=False\n",
+    "    by=\"Final Relative Fatigue Index\", ascending=False\n",
     ")\n",
     "\n",
     "df_imp_lugano_21_sorted"
