updated headers, content

--- a/new.ipynb
+++ b/new.ipynb
@@ -4,14 +4,34 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# ESTIMATING RELATIVE PHYSICAL FATIGUE INDEX OF PLAYERS USING ICE HOCKEY METRICS\n",
+    "# ESTIMATING \"RELATIVE PHYSICAL FATIGUE INDEX\" OF PLAYERS USING ICE HOCKEY METRICS\n",
     "\n",
-    "## Objective: To develop an application that enables coaches to input match data and obtain instant feedback on potential fatigue levels,based on the dataset's metrics.\n"
+    "#### **Objective:** To develop an application that enables coaches to input match data and obtain instant feedback on potential fatigue levels,based on the dataset's metrics.\n",
+    "\n",
+    "#### **Functionality:** Upload data files and obtain instant feedback on potential fatigue levels.\n",
+    "\n",
+    "#### **Applications:** \n",
+    "\n",
+    "1. **Player Management and Rotation:**\n",
+    "   Use the Fatigue Index (FI) to guide real-time player rotation decisions, optimizing performance and minimizing injury risks.\n",
+    "\n",
+    "2. **Injury Prevention in Training:**\n",
+    "   Incorporate FI to tailor training intensity and recovery, reducing the likelihood of player injuries.\n",
+    "\n",
+    "3. **Performance Analysis and Strategy:**\n",
+    "   Integrate FI with performance metrics to refine game strategies, making informed in-game decisions for optimal outcomes.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### DATA LOADING AND PREPROCESSING"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,18 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Load the datasets into Pandas DataFrame\n",
-    "df_lugano = pd.read_csv(\"lugano.csv\", encoding=\"ISO-8859-1\")\n",
-    "# df_zsc = pd.read_csv(\"zsc.csv\", encoding=\"ISO-8859-1\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -262,19 +271,23 @@
        "[5 rows x 226 columns]"
       ]
      },
-     "execution_count": 86,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# Load the datasets into Pandas DataFrame\n",
+    "df_lugano = pd.read_csv(\"lugano.csv\", encoding=\"ISO-8859-1\")\n",
+    "# df_zsc = pd.read_csv(\"zsc.csv\", encoding=\"ISO-8859-1\")\n",
+    "\n",
     "# Print the first 5 rows of the datasets\n",
     "df_lugano.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -296,7 +309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -307,17 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# add a new column called player id to the dataframe and fill it with the player id starting from 1 using .loc as the first column\n",
-    "df_imp_lugano.insert(loc=0, column=\"Player ID\", value=range(1, 1 + len(df_imp_lugano)))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -465,23 +468,21 @@
        "4                44,95           68,85  "
       ]
      },
-     "execution_count": 90,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# add a new column called player id to the dataframe and fill it with the player id starting from 1 using .loc as the first column\n",
+    "df_imp_lugano.insert(loc=0, column=\"Player ID\", value=range(1, 1 + len(df_imp_lugano)))\n",
+    "\n",
     "df_imp_lugano.head()"
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
-  },
-  {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -502,7 +503,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 91,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -514,14 +515,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\samue\\AppData\\Local\\Temp\\ipykernel_1688\\649008270.py:3: SettingWithCopyWarning: \n",
+      "C:\\Users\\samue\\AppData\\Local\\Temp\\ipykernel_7920\\649008270.py:3: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -547,7 +548,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 92,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -564,8 +565,35 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### CONCEPTUAL FRAMEWORK AND METHODOLOGY\n",
+    "Given the anonymized nature and the small sample size of our dataset, combined with numerous variables at play, we've made certain assumptions to ensure its suitable for our use-case. Here’s our approach to understanding player fatigue:\n",
+    "\n",
+    "1. **Picking Player Data:**\n",
+    "Due to lack of player identification data, we had to infer that first 21 rows represent individual player data. This is based on the understanding that a hockey team typically consists of 20 players. This selection ensures we capture data for each unique player.\n",
+    "\n",
+    "2. **Identifying Player Roles:**\n",
+    "We assess the 'Position' column to differentiate between a forward (FW), defenseman (D) and Goalkeeper. The roles they play on the ice rink might result in different fatigue levels.\n",
+    "\n",
+    "3. **Data Segmentation:**\n",
+    "With hundreds of variables present, we narrow down and segment data by recommended metrics from the icehockey club. This targeted analysis aids in the precise estimation of the Fatigue Index (FI).\n",
+    "\n",
+    "4. **Developing the Fatigue Formula:**\n",
+    "Using a combination of the dataset metrics, we create a formula that captures the aspects of player fatigue. This formula is designed to be sensitive to player roles, game dynamics, and other key factors.\n",
+    "\n",
+    "5. **Fatigue Estimation:**\n",
+    "Using the curated data from the previous steps, we derive the Fatigue Index (FI).\n",
+    "\n",
+    "6. **Visualization:**\n",
+    "We design a clear and easy-to-understand graphic to show the fatigue levels. This helps coaches quickly see and understand player tiredness.\n",
+    "\n"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -1040,7 +1068,7 @@
        "20          429,53  "
       ]
      },
-     "execution_count": 93,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1055,7 +1083,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -1085,7 +1113,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 94,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1100,7 +1128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -1113,7 +1141,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 95,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1126,7 +1154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -1140,9 +1168,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\samue\\AppData\\Local\\Temp\\ipykernel_1688\\2322698909.py:2: FutureWarning: Series.__getitem__ treating keys as positions is deprecated. In a future version, integer keys will always be treated as labels (consistent with DataFrame behavior). To access a value by position, use `ser.iloc[pos]`\n",
+      "C:\\Users\\samue\\AppData\\Local\\Temp\\ipykernel_7920\\2322698909.py:2: FutureWarning: Series.__getitem__ treating keys as positions is deprecated. In a future version, integer keys will always be treated as labels (consistent with DataFrame behavior). To access a value by position, use `ser.iloc[pos]`\n",
       "  F = df_imp_lugano_21[\"Position\"].value_counts()[0]\n",
-      "C:\\Users\\samue\\AppData\\Local\\Temp\\ipykernel_1688\\2322698909.py:3: FutureWarning: Series.__getitem__ treating keys as positions is deprecated. In a future version, integer keys will always be treated as labels (consistent with DataFrame behavior). To access a value by position, use `ser.iloc[pos]`\n",
+      "C:\\Users\\samue\\AppData\\Local\\Temp\\ipykernel_7920\\2322698909.py:3: FutureWarning: Series.__getitem__ treating keys as positions is deprecated. In a future version, integer keys will always be treated as labels (consistent with DataFrame behavior). To access a value by position, use `ser.iloc[pos]`\n",
       "  D = df_imp_lugano_21[\"Position\"].value_counts()[1]\n"
      ]
     }
@@ -1162,35 +1190,42 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## CREATING A RELATIVE FATIGUE LEVEL FORMULA\n",
+    "### CREATING A RELATIVE FATIGUE LEVEL FORMULA\n",
     "\n",
-    "- It is a complex task that typically involves empirical research, biomechanics, and physiological considerations.\n",
+    "- Typically involves empirical research, biomechanics, and physiological considerations.\n",
+    "  \n",
     "- However, we propose a simple, hypothetical formula to estimate fatigue.\n",
+    "  \n",
     "- DISCLAIMER : This is a rough estimation and not based on scientific research.\n",
-    "- Using the important metrics as recommended by Professor Martin Rumo, we attempt to create a formula that can be used to estimate fatigue levels.\n"
+    "  \n",
+    "- Using the important metrics recommended by the Ice Hockey Club & Professor Martin Rumo, we attempt to create a formula that can be used to estimate fatigue levels.\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Relative Fatigue Index (RFI) = [(Time on ice/ Match Duration) + (High Metabolic Power Distance / Total Distance) + (Mechanical Intensity)\n",
+    "#### Relative Fatigue Index (RFI) = [A * (Time on ice/ Match Duration) + B * (High Metabolic Power Distance / Total Distance) + C * (Mechanical Intensity)]\n",
     "\n",
-    "- TIME FACTOR : Here, the idea is simple: the more time a player spends on the ice, the more fatigued they're likely to be.\n",
+    "- TIME FACTOR : Percentage of Time spent on Ice. Here, the idea is simple: the more time a player spends on the ice, the more fatigued they're likely to be.\n",
+    "\n",
     "- DISTANCE OR INTENSITY FACTOR : Percentage of the distance covered at high intensities. It's a straightforward indicator of how hard a player pushed themselves relative to their overall activity. It is the distance covered at high metabolic power divided by the total distance covered.\n",
-    "- MECHANICAL OR LOAD INTENSITY : How intense a player's session was concerning accelerations and decelerations.It models the intensity of a session or phase and provides important information about its impact on the lower limbs. It is the Mechanical Load divided by the total time in minutes.\n"
+    "\n",
+    "- MECHANICAL OR LOAD INTENSITY : How intense a player's session was concerning accelerations and decelerations.It models the intensity of a session or phase and provides important information about its impact on the lower limbs. It is the Mechanical Load divided by the total time in minutes.\n",
+    "\n",
+    "- A, B, and C: Weights assigned to each of the factors. These weights are determined by the coach based on the importance of each factor in the context of the team's strategy and the coach's philosophy.\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\samue\\AppData\\Local\\Temp\\ipykernel_1688\\3016819878.py:8: SettingWithCopyWarning: \n",
+      "C:\\Users\\samue\\AppData\\Local\\Temp\\ipykernel_7920\\3016819878.py:8: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -1692,7 +1727,7 @@
        "20          429,53                         1.000000  "
       ]
      },
-     "execution_count": 97,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1714,7 +1749,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1731,7 +1766,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -1761,31 +1796,32 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 99,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# test the function\n",
     "relative_fatigue_index(df_imp_lugano_21)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\samue\\AppData\\Local\\Temp\\ipykernel_1688\\617771039.py:2: SettingWithCopyWarning: \n",
+      "C:\\Users\\samue\\AppData\\Local\\Temp\\ipykernel_7920\\617771039.py:2: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  df_imp_lugano_21[\"Intermediate Fatigue Index\"] = df_imp_lugano_21.apply(\n",
-      "C:\\Users\\samue\\AppData\\Local\\Temp\\ipykernel_1688\\617771039.py:10: SettingWithCopyWarning: \n",
+      "C:\\Users\\samue\\AppData\\Local\\Temp\\ipykernel_7920\\617771039.py:10: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -2354,7 +2390,7 @@
        "20                    1.616113                      0.968016  "
       ]
      },
-     "execution_count": 100,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2378,7 +2414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -2942,7 +2978,7 @@
        "13                    0.001019                      0.000000  "
       ]
      },
-     "execution_count": 101,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
