--- a/Samuel-Rituraj.ipynb
+++ b/Samuel-Rituraj.ipynb
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [
     {
@@ -314,7 +314,7 @@
        "[5 rows x 226 columns]"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 87,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -343,7 +343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [
     {
@@ -439,7 +439,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [
     {
@@ -492,7 +492,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [
     {
@@ -557,7 +557,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [
     {
@@ -748,7 +748,7 @@
        "[89 rows x 8 columns]"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 91,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -799,7 +799,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [
     {
@@ -934,7 +934,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [
     {
@@ -992,7 +992,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [
     {
@@ -1097,7 +1097,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [
     {
@@ -1286,7 +1286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [
     {
@@ -1328,7 +1328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [
     {
@@ -1437,7 +1437,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1470,7 +1470,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [
     {
@@ -1884,7 +1884,7 @@
        "20         21                         1.000000  "
       ]
      },
-     "execution_count": 70,
+     "execution_count": 99,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1922,7 +1922,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [
     {
@@ -1951,7 +1951,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 100,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1997,7 +1997,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2040,7 +2040,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [
     {
@@ -2537,7 +2537,7 @@
        "10                  2.000000  "
       ]
      },
-     "execution_count": 73,
+     "execution_count": 102,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2573,7 +2573,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [
     {
@@ -2710,7 +2710,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2791,7 +2791,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [
     {
@@ -3898,7 +3898,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [
     {
@@ -5007,9 +5007,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\samue\\AppData\\Local\\Temp\\ipykernel_24612\\2955274681.py:16: SettingWithCopyWarning:\n",
+      "\n",
+      "\n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "\n",
+      "C:\\Users\\samue\\AppData\\Local\\Temp\\ipykernel_24612\\2125831255.py:14: SettingWithCopyWarning:\n",
+      "\n",
+      "\n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "\n",
+      "C:\\Users\\samue\\AppData\\Local\\Temp\\ipykernel_24612\\2125831255.py:21: SettingWithCopyWarning:\n",
+      "\n",
+      "\n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -5103,36 +5133,6 @@
       "36                  2.000000  \n",
       "1.4638269712144625\n"
      ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\samue\\AppData\\Local\\Temp\\ipykernel_24612\\2955274681.py:16: SettingWithCopyWarning:\n",
-      "\n",
-      "\n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "\n",
-      "C:\\Users\\samue\\AppData\\Local\\Temp\\ipykernel_24612\\2125831255.py:14: SettingWithCopyWarning:\n",
-      "\n",
-      "\n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "\n",
-      "C:\\Users\\samue\\AppData\\Local\\Temp\\ipykernel_24612\\2125831255.py:21: SettingWithCopyWarning:\n",
-      "\n",
-      "\n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "\n"
-     ]
     }
    ],
    "source": [
@@ -5188,7 +5188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 108,
    "metadata": {},
    "outputs": [
     {
@@ -5334,7 +5334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 109,
    "metadata": {},
    "outputs": [
     {
@@ -5478,7 +5478,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 110,
    "metadata": {},
    "outputs": [
     {
@@ -6401,7 +6401,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 5.3 LINE CHART OF AVERAGE FATIGUE INDEX OF TEAM (CHANGE IN FATIGUE INDEX OVER TIME)"
+    "### 5.3 LINE CHART OF CUMULATIVE FATIGUE INDEX OF TEAM "
    ]
   },
   {
@@ -6413,7 +6413,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 111,
    "metadata": {},
    "outputs": [
     {
@@ -7356,13 +7356,6 @@
     "We're excited about the next steps and making our tool even better for everyone.\n",
     "\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
